backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.wvwwcw.xyz
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 80
